# FableTriggered

./: .gitignore  HarnessMonkey-README.md  README.md  WINDOWS.md  claude-fable-fallback-patch.md  claude-reminder-suppression-patch.md  pyproject.toml
.development/demo-recorder/: README.md  demo_matrix.json  record_demo.py  run_demo_matrix.py
docs/: manifest-v2-operations.md  windows-port-brief.md
docs/windows-port-research/: bun-pe-format.md  claude-code-on-windows.md  codebase-porting-audit.md  windows-terminals-for-art.md
examples/: art_package_emitter.py
examples/capybara-onsen-generator/: README.md  compile.py  generate_package.py  translate_to_windows.py
examples/hotrod-dragons-generator/: README.md  compile_v13.py  generate_package.py
scripts/: generate_icons.py  win_spike_driver.py
src/claude_monkey/: __main__.py  authorization.py  binary_format.py  binary_inspect.py  builder.py  builder_v15.py  bun_graph.py  cli.py  (+28 more)
tests/: builder_fixtures.py  claude_binary.py  fixtures.py  fixtures_bun.py  test_authorization.py  test_binary_format.py  test_binary_inspect.py  test_builder.py  test_builder_progress.py  test_builder_v15.py  test_builder_v3_reports.py  test_bun_graph.py  test_capybara_onsen.py  test_capybara_onsen_win.py  test_cli.py  test_cli_install.py  test_cli_json_contracts.py  test_cli_progress_contract.py  test_cli_v15.py  test_cli_v3_packages.py  test_config_prompts.py  test_config_v3.py  test_fixtures_pe.py  test_footer_drawers_faithful_spike_port.py  test_footer_drawers_package.py  test_generator_parity.py  test_gui_app.py  test_gui_commands.py  test_gui_controller.py  test_gui_progress_dialog.py  test_gui_progress_model.py  test_gui_settings_window.py  test_gui_tray.py  test_gui_window_model.py  test_hidden_context_drawer_package.py  test_hotrod_dragons.py  test_icons.py  test_install.py  test_install_progress.py  test_launch_agent.py  (+35 more)
(+68 files in other folders)
