[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-monkey"
version = "0.1.0"
description = "Source-first local userscript-style customization manager for Claude Code"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-qt>=4.4",
  "ruff>=0.5",
  "Pillow>=10.0"
]
gui = [
  "PySide6>=6.7",
  "pyobjc-framework-Cocoa>=10.0 ; sys_platform == 'darwin'"
]

[project.scripts]
claude-monkey = "claude_monkey.cli:main"
claude-monkey-menubar = "claude_monkey.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "local_real_smoke: opt-in tests that copy and smoke-test the locally installed Claude binary"
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
